--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -31,6 +31,7 @@
                         <segue destination="wRS-ea-oQi" kind="show" identifier="loginScreenSegue" id="vMp-gs-cCJ"/>
                         <segue destination="qba-MY-KTk" kind="show" identifier="homeScreenSegue" id="NGY-dz-YZp"/>
                         <segue destination="4i7-ti-AWO" kind="showDetail" identifier="userTypeSegue" id="0Qf-bV-fQr"/>
+                        <segue destination="46P-gX-Vbx" kind="show" identifier="castTypeSegue" id="u3g-L9-7Ut"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nrM-o1-dnx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -496,7 +497,7 @@
                                 <color key="backgroundColor" red="0.039215686274509803" green="0.34509803921568627" blue="0.72156862745098038" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="tintColor" red="0.95294117649999999" green="0.98039215690000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="I want to be a moderater!"/>
+                                <state key="normal" title="I want to be a moderator!"/>
                                 <connections>
                                     <action selector="moderatorButtonAction:" destination="ulQ-WI-68s" eventType="touchUpInside" id="Lux-mT-dRF"/>
                                 </connections>
@@ -687,6 +688,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="oR1-Mv-fZX"/>
                     </view>
+                    <navigationItem key="navigationItem" id="OHJ-MT-v1K"/>
                     <connections>
                         <outlet property="commentView" destination="BDu-DF-fvo" id="nN9-BY-Z7U"/>
                         <outlet property="commentateCheckBoxBtn" destination="cI0-qv-gaT" id="yXT-Vc-3tc"/>
@@ -699,7 +701,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QsP-K5-EWu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2717.5999999999999" y="115.59220389805098"/>
+            <point key="canvasLocation" x="3094" y="280"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bTf-qj-4uf">
+            <objects>
+                <navigationController id="46P-gX-Vbx" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dVl-df-I9M">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Doh-3v-8FM" kind="relationship" relationship="rootViewController" id="KIX-te-a8u"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sBg-Vo-mts" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2314" y="279"/>
         </scene>
         <!--Cast Moderator View Controller-->
         <scene sceneID="hcE-aK-jZ9">
@@ -750,7 +768,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BzW-K0-BiL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3461.5999999999999" y="115.59220389805098"/>
+            <point key="canvasLocation" x="4100" y="131"/>
         </scene>
         <!--My Castts-->
         <scene sceneID="4ce-z3-unE">
@@ -836,7 +854,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mandeep Singh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1D-b1-FX9">
-                                                    <rect key="frame" x="73" y="19" width="280" height="21"/>
+                                                    <rect key="frame" x="73" y="18" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
@@ -1303,7 +1321,7 @@
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Please enter the OTP (One Time Password) which you have received on your registered mobile number from the Caster!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fs7-Rf-C3L">
                                 <rect key="frame" x="39" y="240" width="298" height="54"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -1319,6 +1337,9 @@
                                 <state key="normal" title="Verify">
                                     <color key="titleColor" red="0.047058823529411764" green="0.43529411764705883" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="verifyBtnClicked:" destination="Vxa-dh-041" eventType="touchUpInside" id="I6R-m6-TBd"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Ri-xf-XYM">
                                 <rect key="frame" x="87" y="340" width="203" height="45"/>
@@ -1330,7 +1351,7 @@
                                         <color key="backgroundColor" red="0.39215686274509803" green="0.65098039215686276" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES" textContentType="tel"/>
                                         <connections>
                                             <outlet property="delegate" destination="Vxa-dh-041" id="1ZD-vf-Oai"/>
                                         </connections>
@@ -1341,7 +1362,7 @@
                                         <color key="backgroundColor" red="0.3921568627" green="0.65098039220000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES" textContentType="tel"/>
                                         <connections>
                                             <outlet property="delegate" destination="Vxa-dh-041" id="O2r-Jw-dqk"/>
                                         </connections>
@@ -1352,7 +1373,7 @@
                                         <color key="backgroundColor" red="0.3921568627" green="0.65098039220000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES" textContentType="tel"/>
                                         <connections>
                                             <outlet property="delegate" destination="Vxa-dh-041" id="U5X-Xe-CwX"/>
                                         </connections>
@@ -1363,7 +1384,7 @@
                                         <color key="backgroundColor" red="0.3921568627" green="0.65098039220000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES" textContentType="tel"/>
                                         <connections>
                                             <outlet property="delegate" destination="Vxa-dh-041" id="T5w-2g-bER"/>
                                         </connections>
